--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,16 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id("org.jetbrains.changelog") version "1.3.1"
 }
+
+task {
+    patchPluginXml {
+        changeNotes(provider { changelog.getUnreleased().toHTML() })
+    }
+}
+
+
 
 android {
     compileSdk 31
