--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,6 @@ plugins {
     id("org.jetbrains.changelog") version "1.3.1"
 }
 
-task {
-    patchPluginXml {
-        changeNotes(provider { changelog.getUnreleased().toHTML() })
-    }
-}
-
 
 
 android {
@@ -41,6 +35,14 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    buildscript {
+        repositories {
+            maven {
+                url = uri("https://plugins.gradle.org/m2/")
+            }
+        }
+    }
 }
 
 dependencies {
@@ -54,4 +56,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation("org.jetbrains.intellij.plugins:gradle-changelog-plugin:1.3.1")
 }
