--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,21 @@ plugins {
     id("org.jetbrains.changelog") version "1.3.1"
 }
 
+tasks {
+    patchPluginXml {
+        changeNotes(provider { changelog.get("1.0.0").toHTML() })
+    }
+}
 
+changelog {
+    version.set("1.0.0")
+    path.set("${project.projectDir}/CHANGELOG.md")
+    header.set(provider { "[${version.get()}] - ${date()}" })
+    itemPrefix.set("-")
+    keepUnreleasedSection.set(true)
+    unreleasedTerm.set("[Unreleased]")
+    groups.set(listOf("Added", "Changed", "Deprecated", "Removed", "Fixed", "Security"))
+}
 
 android {
     compileSdk 31
@@ -35,14 +49,6 @@ android {
     buildFeatures {
         viewBinding true
     }
-
-    buildscript {
-        repositories {
-            maven {
-                url = uri("https://plugins.gradle.org/m2/")
-            }
-        }
-    }
 }
 
 dependencies {
@@ -56,5 +62,4 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation("org.jetbrains.intellij.plugins:gradle-changelog-plugin:1.3.1")
 }
